# localization_ros2_robocon

./: README.md
robot_r2/my_robot_commands/: package.xml  setup.cfg  setup.py
robot_r2/my_robot_commands/scripts/: move_robot.py
robot_r2/robot_r2_description/: CMakeLists.txt  package.xml
robot_r2/robot_r2_description/config/: ekf.yaml
robot_r2/robot_r2_description/launch/: robot_auto.launch.py  robot_auto_v1.launch.py  robot_auto_v2.launch.py  robot_auto_v3.launch.py
robot_r2/robot_r2_description/scripts/: nav_through_poses.py  robot_navigator.py
robot_r2/robot_r2_description/urdf/: mecanum_properties.urdf.xacro
robot_r2/robot_r2_description/urdf/controllers/: omni_drive.urdf.xacro
robot_r2/robot_r2_description/urdf/robots/: mecanum.urdf.xacro
robot_r2/robot_r2_gazebo/: CMakeLists.txt  package.xml
robot_r2/robot_r2_gazebo/launch/: gazebo.launch.py
robot_r2/robot_r2_gazebo/scripts/: move_robot.py
robot_r2/robot_r2_navigation/: CMakeLists.txt  package.xml
robot_r2/robot_r2_navigation/launch/: navigation.launch.py  slam.launch.py
