<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>my_robot_commands</name>
  <version>0.0.1</version>
  <description>TODO: Package description</description>
  <maintainer email="sophatsophana25@gmail.com">Sophat Sophana</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>  <!-- Add this line -->
  <depend>nav2_msgs</depend>  <!-- Add this line -->

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>