<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_r2_navigation</name>
  <version>0.0.0</version>
    <description>Linorobot2 Navigation Package</description>
  <maintainer email="sophatsophana25@gmail.com">Sophat Sophana</maintainer>
  <license>Apache 2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
    <exec_depend>nav2_bringup</exec_depend>
    <!-- <exec_depend>slam_toolbox</exec_depend> -->
  </export>
</package>
